// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`note A legacy note, has same styling as warning renders as expected 1`] = `
<div
  className="dr-ui--note py18 px18 round flex mb18 bg-orange-faint color-orange-dark"
>
  <div
    className="mr18 none block-mm pt3"
  >
    <div
      className="bg-orange-lighter round-full color-orange flex flex--center-main flex--center-cross"
      style={
        Object {
          "height": 50,
          "width": 50,
        }
      }
    >
      <svg
        className="events-none icon"
        focusable="false"
        role="presentation"
        style={
          Object {
            "height": 40,
            "width": 40,
          }
        }
      >
        <use
          xlinkHref="#icon-alert"
          xmlnsXlink="http://www.w3.org/1999/xlink"
        />
      </svg>
    </div>
  </div>
  <div
    className="w-full prose"
  >
    <div
      className="txt-bold mb6"
    >
      Warning
    </div>
    <div>
      <p>
        You can create custom styles with
         
        <a
          href="https://studio.mapbox.com"
        >
          Mapbox Studio
        </a>
         and then add them to your app. To programmatically add one of your custom styles to your
         
        <code>
          mapboxMap
        </code>
        , head to your
         
        <a
          href="https://studio.mapbox.com/styles/"
        >
          styles page
        </a>
        , copy your style's 
        <a
          href="/help/glossary/style-url/"
        >
          style URL
        </a>
        , and then add it to your 
        <code>
          mapboxMap
        </code>
         object with
         
        <code>
          setStyleUrl();
        </code>
        :
      </p>
      <pre
        className=" language-java"
      >
        <code
          className=" language-java"
        >
          mapboxMap
          <span
            className="token punctuation"
          >
            .
          </span>
          <span
            className="token function"
          >
            setStyle
          </span>
          <span
            className="token punctuation"
          >
            (
          </span>
          <span
            className="token keyword"
          >
            new
          </span>
           
          <span
            className="token class-name"
          >
            Style
          </span>
          <span
            className="token punctuation"
          >
            .
          </span>
          <span
            className="token class-name"
          >
            Builder
          </span>
          <span
            className="token punctuation"
          >
            (
          </span>
          <span
            className="token punctuation"
          >
            )
          </span>
          <span
            className="token punctuation"
          >
            .
          </span>
          <span
            className="token function"
          >
            fromUri
          </span>
          <span
            className="token punctuation"
          >
            (
          </span>
          <span
            className="token string"
          >
            "mapbox://styles/your-mapbox-username/your-style-ID"
          </span>
        </code>
      </pre>
    </div>
  </div>
</div>
`;

exports[`note A note to display an error with steps or links on how to troubleshoot. renders as expected 1`] = `
<div
  className="dr-ui--note py18 px18 round flex mb18 bg-red-faint color-red-dark"
>
  <div
    className="mr18 none block-mm pt3"
  >
    <div
      className="bg-red-lighter round-full color-red flex flex--center-main flex--center-cross"
      style={
        Object {
          "height": 50,
          "width": 50,
        }
      }
    >
      <svg
        className="events-none icon"
        focusable="false"
        role="presentation"
        style={
          Object {
            "height": 40,
            "width": 40,
          }
        }
      >
        <use
          xlinkHref="#icon-alert"
          xmlnsXlink="http://www.w3.org/1999/xlink"
        />
      </svg>
    </div>
  </div>
  <div
    className="w-full prose"
  >
    <div
      className="txt-bold mb6"
    >
      Error
    </div>
    <div>
      <p>
        You can create custom styles with
         
        <a
          href="https://studio.mapbox.com"
        >
          Mapbox Studio
        </a>
         and then add them to your app. To programmatically add one of your custom styles to your
         
        <code>
          mapboxMap
        </code>
        , head to your
         
        <a
          href="https://studio.mapbox.com/styles/"
        >
          styles page
        </a>
        , copy your style's 
        <a
          href="/help/glossary/style-url/"
        >
          style URL
        </a>
        , and then add it to your 
        <code>
          mapboxMap
        </code>
         object with
         
        <code>
          setStyleUrl();
        </code>
        :
      </p>
      <pre
        className=" language-java"
      >
        <code
          className=" language-java"
        >
          mapboxMap
          <span
            className="token punctuation"
          >
            .
          </span>
          <span
            className="token function"
          >
            setStyle
          </span>
          <span
            className="token punctuation"
          >
            (
          </span>
          <span
            className="token keyword"
          >
            new
          </span>
           
          <span
            className="token class-name"
          >
            Style
          </span>
          <span
            className="token punctuation"
          >
            .
          </span>
          <span
            className="token class-name"
          >
            Builder
          </span>
          <span
            className="token punctuation"
          >
            (
          </span>
          <span
            className="token punctuation"
          >
            )
          </span>
          <span
            className="token punctuation"
          >
            .
          </span>
          <span
            className="token function"
          >
            fromUri
          </span>
          <span
            className="token punctuation"
          >
            (
          </span>
          <span
            className="token string"
          >
            "mapbox://styles/your-mapbox-username/your-style-ID"
          </span>
        </code>
      </pre>
    </div>
  </div>
</div>
`;

exports[`note A note to display with a message about new products or features. renders as expected 1`] = `
<div
  className="dr-ui--note py18 px18 round flex mb18 bg-green-faint color-green-dark"
>
  <div
    className="mr18 none block-mm pt3"
  >
    <div
      className="bg-green-lighter round-full color-green flex flex--center-main flex--center-cross"
      style={
        Object {
          "height": 50,
          "width": 50,
        }
      }
    >
      <svg
        className="events-none icon"
        focusable="false"
        role="presentation"
        style={
          Object {
            "height": 40,
            "width": 40,
          }
        }
      >
        <use
          xlinkHref="#icon-plus"
          xmlnsXlink="http://www.w3.org/1999/xlink"
        />
      </svg>
    </div>
  </div>
  <div
    className="w-full prose"
  >
    <div
      className="txt-bold mb6"
    >
      New!
    </div>
    <div>
      <p>
        You can create custom styles with
         
        <a
          href="https://studio.mapbox.com"
        >
          Mapbox Studio
        </a>
         and then add them to your app. To programmatically add one of your custom styles to your
         
        <code>
          mapboxMap
        </code>
        , head to your
         
        <a
          href="https://studio.mapbox.com/styles/"
        >
          styles page
        </a>
        , copy your style's 
        <a
          href="/help/glossary/style-url/"
        >
          style URL
        </a>
        , and then add it to your 
        <code>
          mapboxMap
        </code>
         object with
         
        <code>
          setStyleUrl();
        </code>
        :
      </p>
      <pre
        className=" language-java"
      >
        <code
          className=" language-java"
        >
          mapboxMap
          <span
            className="token punctuation"
          >
            .
          </span>
          <span
            className="token function"
          >
            setStyle
          </span>
          <span
            className="token punctuation"
          >
            (
          </span>
          <span
            className="token keyword"
          >
            new
          </span>
           
          <span
            className="token class-name"
          >
            Style
          </span>
          <span
            className="token punctuation"
          >
            .
          </span>
          <span
            className="token class-name"
          >
            Builder
          </span>
          <span
            className="token punctuation"
          >
            (
          </span>
          <span
            className="token punctuation"
          >
            )
          </span>
          <span
            className="token punctuation"
          >
            .
          </span>
          <span
            className="token function"
          >
            fromUri
          </span>
          <span
            className="token punctuation"
          >
            (
          </span>
          <span
            className="token string"
          >
            "mapbox://styles/your-mapbox-username/your-style-ID"
          </span>
        </code>
      </pre>
    </div>
  </div>
</div>
`;

exports[`note A note to flag information about a beta release/product renders as expected 1`] = `
<div
  className="dr-ui--note py18 px18 round flex mb18 bg-blue-faint color-blue-dark"
>
  <div
    className="mr18 none block-mm pt3"
  >
    <div
      className="bg-blue-lighter round-full color-blue flex flex--center-main flex--center-cross"
      style={
        Object {
          "height": 50,
          "width": 50,
        }
      }
    >
      <svg
        className="events-none icon"
        focusable="false"
        role="presentation"
        style={
          Object {
            "height": 40,
            "width": 40,
          }
        }
      >
        <use
          xlinkHref="#icon-lightning"
          xmlnsXlink="http://www.w3.org/1999/xlink"
        />
      </svg>
    </div>
  </div>
  <div
    className="w-full prose"
  >
    <div
      className="txt-bold mb6"
    >
      Beta
    </div>
    <div>
      <p>
        You can create custom styles with
         
        <a
          href="https://studio.mapbox.com"
        >
          Mapbox Studio
        </a>
         and then add them to your app. To programmatically add one of your custom styles to your
         
        <code>
          mapboxMap
        </code>
        , head to your
         
        <a
          href="https://studio.mapbox.com/styles/"
        >
          styles page
        </a>
        , copy your style's 
        <a
          href="/help/glossary/style-url/"
        >
          style URL
        </a>
        , and then add it to your 
        <code>
          mapboxMap
        </code>
         object with
         
        <code>
          setStyleUrl();
        </code>
        :
      </p>
      <pre
        className=" language-java"
      >
        <code
          className=" language-java"
        >
          mapboxMap
          <span
            className="token punctuation"
          >
            .
          </span>
          <span
            className="token function"
          >
            setStyle
          </span>
          <span
            className="token punctuation"
          >
            (
          </span>
          <span
            className="token keyword"
          >
            new
          </span>
           
          <span
            className="token class-name"
          >
            Style
          </span>
          <span
            className="token punctuation"
          >
            .
          </span>
          <span
            className="token class-name"
          >
            Builder
          </span>
          <span
            className="token punctuation"
          >
            (
          </span>
          <span
            className="token punctuation"
          >
            )
          </span>
          <span
            className="token punctuation"
          >
            .
          </span>
          <span
            className="token function"
          >
            fromUri
          </span>
          <span
            className="token punctuation"
          >
            (
          </span>
          <span
            className="token string"
          >
            "mapbox://styles/your-mapbox-username/your-style-ID"
          </span>
        </code>
      </pre>
    </div>
  </div>
</div>
`;

exports[`note A warning note to let the user know something has changed or will change. renders as expected 1`] = `
<div
  className="dr-ui--note py18 px18 round flex mb18 bg-orange-faint color-orange-dark"
>
  <div
    className="mr18 none block-mm pt3"
  >
    <div
      className="bg-orange-lighter round-full color-orange flex flex--center-main flex--center-cross"
      style={
        Object {
          "height": 50,
          "width": 50,
        }
      }
    >
      <svg
        className="events-none icon"
        focusable="false"
        role="presentation"
        style={
          Object {
            "height": 40,
            "width": 40,
          }
        }
      >
        <use
          xlinkHref="#icon-alert"
          xmlnsXlink="http://www.w3.org/1999/xlink"
        />
      </svg>
    </div>
  </div>
  <div
    className="w-full prose"
  >
    <div
      className="txt-bold mb6"
    >
      Be careful
    </div>
    <div>
      <p>
        You can create custom styles with
         
        <a
          href="https://studio.mapbox.com"
        >
          Mapbox Studio
        </a>
         and then add them to your app. To programmatically add one of your custom styles to your
         
        <code>
          mapboxMap
        </code>
        , head to your
         
        <a
          href="https://studio.mapbox.com/styles/"
        >
          styles page
        </a>
        , copy your style's 
        <a
          href="/help/glossary/style-url/"
        >
          style URL
        </a>
        , and then add it to your 
        <code>
          mapboxMap
        </code>
         object with
         
        <code>
          setStyleUrl();
        </code>
        :
      </p>
      <pre
        className=" language-java"
      >
        <code
          className=" language-java"
        >
          mapboxMap
          <span
            className="token punctuation"
          >
            .
          </span>
          <span
            className="token function"
          >
            setStyle
          </span>
          <span
            className="token punctuation"
          >
            (
          </span>
          <span
            className="token keyword"
          >
            new
          </span>
           
          <span
            className="token class-name"
          >
            Style
          </span>
          <span
            className="token punctuation"
          >
            .
          </span>
          <span
            className="token class-name"
          >
            Builder
          </span>
          <span
            className="token punctuation"
          >
            (
          </span>
          <span
            className="token punctuation"
          >
            )
          </span>
          <span
            className="token punctuation"
          >
            .
          </span>
          <span
            className="token function"
          >
            fromUri
          </span>
          <span
            className="token punctuation"
          >
            (
          </span>
          <span
            className="token string"
          >
            "mapbox://styles/your-mapbox-username/your-style-ID"
          </span>
        </code>
      </pre>
    </div>
  </div>
</div>
`;

exports[`note Default note renders as expected 1`] = `
<div
  className="dr-ui--note py18 px18 round flex mb18 bg-gray-faint color-gray-dark"
>
  <div
    className="mr18 none block-mm pt3"
  >
    <div
      className="bg-gray-lighter round-full color-gray flex flex--center-main flex--center-cross"
      style={
        Object {
          "height": 50,
          "width": 50,
        }
      }
    >
      <svg
        className="events-none icon"
        focusable="false"
        role="presentation"
        style={
          Object {
            "height": 40,
            "width": 40,
          }
        }
      >
        <use
          xlinkHref="#icon-book"
          xmlnsXlink="http://www.w3.org/1999/xlink"
        />
      </svg>
    </div>
  </div>
  <div
    className="w-full prose"
  >
    <div
      className="txt-bold mb6"
    >
      Note
    </div>
    <p>
      Here is a little thing to note.
    </p>
  </div>
</div>
`;

exports[`note Note with custom title. renders as expected 1`] = `
<div
  className="dr-ui--note py18 px18 round flex mb18 bg-gray-faint color-gray-dark"
>
  <div
    className="mr18 none block-mm pt3"
  >
    <div
      className="bg-gray-lighter round-full color-gray flex flex--center-main flex--center-cross"
      style={
        Object {
          "height": 50,
          "width": 50,
        }
      }
    >
      <svg
        className="events-none icon"
        focusable="false"
        role="presentation"
        style={
          Object {
            "height": 40,
            "width": 40,
          }
        }
      >
        <use
          xlinkHref="#icon-book"
          xmlnsXlink="http://www.w3.org/1999/xlink"
        />
      </svg>
    </div>
  </div>
  <div
    className="w-full prose"
  >
    <div
      className="txt-bold mb6"
    >
      A very important note
    </div>
    <div>
      <p>
        You can create custom styles with
         
        <a
          href="https://studio.mapbox.com"
        >
          Mapbox Studio
        </a>
         and then add them to your app. To programmatically add one of your custom styles to your
         
        <code>
          mapboxMap
        </code>
        , head to your
         
        <a
          href="https://studio.mapbox.com/styles/"
        >
          styles page
        </a>
        , copy your style's 
        <a
          href="/help/glossary/style-url/"
        >
          style URL
        </a>
        , and then add it to your 
        <code>
          mapboxMap
        </code>
         object with
         
        <code>
          setStyleUrl();
        </code>
        :
      </p>
      <pre
        className=" language-java"
      >
        <code
          className=" language-java"
        >
          mapboxMap
          <span
            className="token punctuation"
          >
            .
          </span>
          <span
            className="token function"
          >
            setStyle
          </span>
          <span
            className="token punctuation"
          >
            (
          </span>
          <span
            className="token keyword"
          >
            new
          </span>
           
          <span
            className="token class-name"
          >
            Style
          </span>
          <span
            className="token punctuation"
          >
            .
          </span>
          <span
            className="token class-name"
          >
            Builder
          </span>
          <span
            className="token punctuation"
          >
            (
          </span>
          <span
            className="token punctuation"
          >
            )
          </span>
          <span
            className="token punctuation"
          >
            .
          </span>
          <span
            className="token function"
          >
            fromUri
          </span>
          <span
            className="token punctuation"
          >
            (
          </span>
          <span
            className="token string"
          >
            "mapbox://styles/your-mapbox-username/your-style-ID"
          </span>
        </code>
      </pre>
    </div>
  </div>
</div>
`;

exports[`note download renders as expected 1`] = `
<div
  className="dr-ui--note py18 px18 round flex mb18 bg-purple-faint color-purple-dark"
>
  <div
    className="mr18 none block-mm pt3"
  >
    <div
      className="bg-purple-lighter round-full color-purple flex flex--center-main flex--center-cross"
      style={
        Object {
          "height": 50,
          "width": 50,
        }
      }
    >
      <svg
        className="events-none icon"
        focusable="false"
        role="presentation"
        style={
          Object {
            "height": 40,
            "width": 40,
          }
        }
      >
        <use
          xlinkHref="#icon-arrow-down"
          xmlnsXlink="http://www.w3.org/1999/xlink"
        />
      </svg>
    </div>
  </div>
  <div
    className="w-full prose"
  >
    <div
      className="txt-bold mb6"
    >
      Download from vision.mapbox.com/install
    </div>
    <div>
      <p>
        You can create custom styles with
         
        <a
          href="https://studio.mapbox.com"
        >
          Mapbox Studio
        </a>
         and then add them to your app. To programmatically add one of your custom styles to your
         
        <code>
          mapboxMap
        </code>
        , head to your
         
        <a
          href="https://studio.mapbox.com/styles/"
        >
          styles page
        </a>
        , copy your style's 
        <a
          href="/help/glossary/style-url/"
        >
          style URL
        </a>
        , and then add it to your 
        <code>
          mapboxMap
        </code>
         object with
         
        <code>
          setStyleUrl();
        </code>
        :
      </p>
      <pre
        className=" language-java"
      >
        <code
          className=" language-java"
        >
          mapboxMap
          <span
            className="token punctuation"
          >
            .
          </span>
          <span
            className="token function"
          >
            setStyle
          </span>
          <span
            className="token punctuation"
          >
            (
          </span>
          <span
            className="token keyword"
          >
            new
          </span>
           
          <span
            className="token class-name"
          >
            Style
          </span>
          <span
            className="token punctuation"
          >
            .
          </span>
          <span
            className="token class-name"
          >
            Builder
          </span>
          <span
            className="token punctuation"
          >
            (
          </span>
          <span
            className="token punctuation"
          >
            )
          </span>
          <span
            className="token punctuation"
          >
            .
          </span>
          <span
            className="token function"
          >
            fromUri
          </span>
          <span
            className="token punctuation"
          >
            (
          </span>
          <span
            className="token string"
          >
            "mapbox://styles/your-mapbox-username/your-style-ID"
          </span>
        </code>
      </pre>
    </div>
  </div>
</div>
`;
